--- a/scss/abstract/_mediaqueries.scss
+++ b/scss/abstract/_mediaqueries.scss
@@ -1,11 +1,7 @@
 @use "../abstract/variables" as var;
-@mixin small{
-    @media (min-width:#{var.$small-width}) and (max-width:#{var.$large-width-1px}){
+@mixin media-query{
+    @media only screen and (max-width:var.$max-width){
         @content;
     }
 }
-@mixin large{
-    @media (min-width:#{var.$large-width}){
-        @content;
-    }
-}
+
